--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
 
 <div class="center">
   <button mat-raised-button color="primary" class="rollButton">
-    <span>Roll the Gleis!</span>
+    <span>Roll the next Track!</span>
   </button>
 </div>
