--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -1,7 +1,7 @@
 <div class="center">
   <form class="station-form">
     <mat-form-field class="station-name" appearance="outline">
-      <mat-label>Wähle deine aktuelle Station aus!</mat-label>
+      <mat-label>Choose your current Station!</mat-label>
 
       <input type="text" placeholder="Pick one" matInput [formControl]="stationControl" [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
