--- a/src/app/dice/dice.component.html
+++ b/src/app/dice/dice.component.html
@@ -11,6 +11,6 @@
     <h1>{{stationsToRide}}</h1>
 
     <h3>Current Station</h3>
-    <h1 *ngFor="let station of stations">{{station.name}}</h1>
+    <h1>{{areaStations[0].name}}</h1>
   </mat-card>
 </div>
