--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -5,8 +5,8 @@
 
       <input type="text" placeholder="Pick one" matInput [formControl]="stationControl" [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let station of filteredStations | async" [value]="station.name">
-          {{station.name}}
+        <mat-option *ngFor="let stop of filteredStations | async" [value]="stop['name']">
+          {{stop["name"]}}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
